tdf#159862: set SearchWildcard to false changes SearchRegularExpression value

Like this since 2016 with 3a0abd3019ec3ca29b8f1378cdb32ebf741e6306
add SvxSearchItem::GetWildcard() SetWildcard()

Change-Id: Id988a6e58488af6b1f274a318e9d1f52c7a8b169
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163876
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins
(cherry picked from commit d05e863c69b5611964a4a2eb242ee9566cfb659e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163836
Reviewed-by: Eike Rathke <erack@redhat.com>